--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/login/login.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/login/login.component.css
@@ -16,8 +16,8 @@ main {
 }
 
 mat-card {
-  height: 600px;
-  width: 1200px;
+  height: 75%;
+  width: 75%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -35,7 +35,6 @@ mat-card {
 
 #company-name {
   font-weight: bold;
-  margin-bottom: 6rem !important;
 }
 
 mat-card-header {
