--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
@@ -1,332 +1,95 @@
 main {
-    box-shadow: none;
-    padding: 30px;
+  position: absolute;
+  height: 100vh;
+  width: calc(100vw - 80px);
+  max-height: 100vh;
+  max-width: calc(100vw - 80px);
+  left: 60px;
+  padding: 30px;
 }
-
-main>div {
-    border-radius: 24px;
-    /* box-shadow: white 0px 8px 24px; */
-    /* box-shadow:  white 0px -12px 30px, white 0px 4px 6px, white 0px 12px 13px, white 0px -3px 5px; */
-    padding: 20px;
-}
-
-main {
-    position: absolute;
-    height: calc(100vh - 120px);
-    width: calc(100vw - 100px);
-    max-height: calc(100vh - 120px);
-    max-width: calc(100vw - 100px);
-    border-radius: 20px;
-    top: 50px;
-    left: 80px;
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-    /* -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; */
-}
-
-h5 {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
-}
-
-/* .left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 30%;
-    height: 100%;
-}
-
-.right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 70%;
-    height: 100%;
-} */
-mat-card {
-    background-color: #222143;
-    color: white;
-    /* height: 500px; */
-    /* width: 100%; */
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    margin: 10px;
-    padding: 20px;
-    /* left: 50px; */
-    /* align-items: center; */
-    /* justify-content: center; */
-}
-
-mat-form-field{
-    width: 100%;
-    margin: 0;
-}
-
-form {
-    /* position: relative; */
-    /* width: 360px; */
-    /* padding: 0 30px 0 30px; */
-    /* display: block; */
-    display: flex;
-    flex-direction: row;
-    background-color: #222143;
-    align-items: center;
-    width: 100%;
-}
-
 
 a {
-    cursor: pointer;
-    text-decoration: underline;
+  text-decoration: none;
+  color: black;
 }
 
-
-/* .buttons {
-    position: absolute;
-    bottom: 30px;
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-} */
-
-.import-card .buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /* margin-top: 20px; */
-    width: 100%;
+#back-link {
+  font-size: 18px;
 }
 
-.back-button {
-    background-color: white;
-    color: #4F85F2;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    margin-right: 20px;
-}
-
-.submit-button {
-    background-color: white;
-    color: #4F85F2;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    margin-right: 20px;
-}
-
-.preview-button {
-    background-color: #4F85F2;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    display: block;
-    margin: 0 auto;
-}
-
-.preview-card {
-    min-width: 900px;
-    position: relative;
-}
-
-
-
-.import-card{
-    min-width: 200px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#back-link:hover {
+  color: var(--button-background);
 }
 
 app-upload {
-    width: 100%;
-}
-@media screen and (max-width: 1200px) {
-    .import-card {
-        display: flex;
-        flex-direction: row;
-        position: relative;
-
-    }
-
-    .left{
-        /* width: 100%; */
-        min-width: 550px
-    }
-
-    app-upload {
-        width: 75%;
-    }
-
-    .import-card .buttons{
-        flex-direction: column;
-        width: 20%;
-    }
-
-    .preview-button{
-        margin-top: 20px;
-        width: 100%;
-        padding: 10px;
-    }
+  display: block;
 }
 
-
-mat-label {
-    color: #4F85F2;
+#template {
+  background-color: #f5f5f5;
+  vertical-align: middle;
 }
 
-h3 {
-    padding-left: 20px;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 20px;
+#template a:hover {
+  color: var(--button-background);
 }
 
-div:has(#page-title) {
-    display: flex;
+#template p {
+  font-size: 14px;
+  color: grey;
 }
 
 button {
-    background: #535c91;
-    border: none;
+  width: 105px;
+  height: 40px;
+  background-color: white;
+  padding: .5rem 1rem;
 }
 
-
-.btIP {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
+button:hover {
+  background-color: var(--button-background) !important;
+  color: white;
 }
 
-.btIP button {
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-right: 10px;
+#data {
+  height: 58%;
 }
 
-.btIP i {
-    margin-right: 10px;
+.table {
+  height: 81%;
 }
 
-
-
-.searchBar {
-    position: relative;
-    display: inline;
-}
-
-.searchBar input[type="text"] {
-    width: 40%;
-
-    line-height: 2.5;
-    padding: 0px 35px;
-    border: 1px solid #9290c3;
-    border-radius: 10px;
-    background-color: #070f2b;
-    color: white;
-}
-
-.searchBar .fa-search {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #9290c3;
-}
-
-table {
-    width: 100%;
-    min-height: auto;
-    background-color: #070f2b !important;
-    border: 1px solid #9290c3;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    overflow: hidden !important;
-    box-shadow: 0px -5px 2px -4px #9290c3;
-    flex-shrink: 0;
-}
-
-tr {
-    background-color: #1b1a55;
-    color: white;
-}
-
-th {
-    border-bottom: 1px solid #1b1a55;
-    color: white;
-}
-
-td {
-    border-top: 1px solid #535c91;
-    color: #9290c3;
-}
-
-::ng-deep .mat-mdc-paginator {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    overflow: hidden;
-}
-
-::ng-deep .mat-mdc-paginator-outer-container {
-    background-color: #535c91;
-    color: white;
-}
-
-::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
-    height: 50px;
-}
-
-::ng-deep .mat-mdc-text-field-wrapper {
-    margin-top: 20px !important;
+::ng-deep .mdc-text-field {
+  background-color: transparent !important;
+  overflow: hidden;
 }
 
 ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color: #070f2b !important;
-    border: 1px solid #9290c3;
-    border-radius: 10px;
-
+  border: 2px solid var(--white-smoke);
+  border-radius: 10px;
 }
 
-::ng-deep .mat-mdc-select-arrow {
-    color: white !important;
+table {
+  width: 100%;
+  border: 2px solid var(--white-smoke);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: hidden !important;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  flex-shrink: 0;
 }
 
-::ng-deep .mat-mdc-form-field-infix {
-
-    width: 100px !important;
+th {
+  font-weight: 900;
+  background-color: #f2f4f3 !important;
 }
 
-::ng-deep .mdc-text-field--filled .mdc-floating-label {
-
-    font-size: 14px !important;
-
+::ng-deep .mat-mdc-paginator {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
 }
 
-::ng-deep .mat-mdc-select {
-    color: white !important;
-    font-size: 14px !important;
+#submit-button {
+  background-color: var(--white-smoke);
 }
-
-::ng-deep .mat-mdc-form-field {
-
-    margin-left: 30px;
-
-}
-
-.emtry-data-message {
-    text-align: center;
-    font-size: large;
-    margin-top: 15%;
-}
-
