update paginator in user list

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
@@ -25,6 +25,14 @@ form input:focus, form select:focus {
   border-color: rgb(133, 68, 165);
 }
 
+mat-datepicker-toggle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-320%);
+  right: 67%;
+}
+
+
 
 /* HTML: <div class="loader"></div> */
 .loader {
