--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -1,6 +1,6 @@
 main {
   position: absolute;
-  height: 100vh;
+  min-height:86vh;
   width: 100%;
   background-color: #E6E6E6;
   padding-left: 1%;
