--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
@@ -98,8 +98,8 @@
                             <h6 class="mb-0">DOB<span class="required-star">*</span></h6>
                         </div>
                         <div class="col-md-5 pe-3">
-                            <input matInput [matDatepicker]="dobPicker" placeholder="Choose a date"
-                                formControlName="dob">
+                            <input matInput [matDatepicker]="dobPicker" placeholder="Choose a date" formControlName="dob"
+                                class="form-control form-control-lg">
                             <mat-datepicker-toggle matSuffix [for]="dobPicker"></mat-datepicker-toggle>
                             <mat-datepicker #dobPicker></mat-datepicker>
                         </div>
