--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -24,7 +24,7 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="userList.length == 0">
     <ng-container matColumnDef="index">
       <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let row; let rowIndex = index">{{rowIndex + 1}}</td>
+      <td mat-cell *matCellDef="let row; let rowIndex = index">{{(paginator?.pageIndex || 0) * (paginator?.pageSize || 0) + rowIndex + 1}}</td>
     </ng-container>
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef>UserName</th>
@@ -57,9 +57,7 @@
   <div *ngIf="userList.length == 0" class="empty-data-message">
     No items match your credentials, please try again.
   </div>
-  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0  || (dataSource.length<pageSize && pageIndex==0)">
-  </mat-paginator>
-</main>
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [pageSizeOptions]="[5, 10, 20, 50]"></mat-paginator>
 <footer>
   <!-- Your footer content goes here -->
 </footer>
