--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.html
@@ -1,7 +1,7 @@
 <aside id="sidenav">
   <img src="../../../assets/img/logo.png" alt="logo" class="logo">
   <b>Financial Plan System</b>
-  <div id="account" class="pt-2">
+  <div id="account">
     <i class="fa-regular fa-user my-auto mx-3"></i>
     <div class="d-grid align-self-center fw-bolder w-45">{{ username }}<span id="role" class="d-block">{{role}}</span>
     </div>
