--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.css
@@ -54,7 +54,7 @@ table {
 
 
 main>div {
-    border-radius: 24px;
+    border-radius: 15px;
     background-color: #FAF6F6;
     box-shadow: rgba(228, 223, 216, 0.2) 0px 8px 24px;
     padding: 20px;
@@ -62,14 +62,14 @@ main>div {
 
 main {
     position: relative;
-    min-height: calc(100vh - 120px);
-    width: calc(100vw - 100px);
-    min-height: calc(100vh - 120px);
-    max-width: calc(100vw - 100px);
+    width: 100%;
     background-color: #E6E6E6;
     box-shadow: none;
-    padding: 30px;
-    margin-left: 2%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 30px;
+    padding-bottom: 200px;
+    /* margin-left: 2%; */
 }
 
 /* Trích dẫn phần tử chứa các lựa chọn "Active" và "Deactive" */
@@ -80,7 +80,7 @@ main {
     font-weight: bold;
     background-color: #E6E6E6;
     margin-top: 10px;
-    margin-right: 5px;
+    margin-right: 4%;
     padding: 2px;
     font-size: larger;
 }
