--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/admin-sidenav/admin-sidenav.component.css
@@ -7,20 +7,18 @@
   background-color: #ADB9D1;
   color: white;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
   padding: 0.5%;
-  /* align-content: space-between; */
 }
 
 #sidenav b {
   font-size: xx-large;
   position: relative;
-  /* margin-left: 40%; */
-  /* min-width: 100%; */
   color: black;
   font-weight: 900;
 }
+
 #sidenav a {
   display: flex;
   align-items: center;
@@ -32,6 +30,7 @@
   color: white;
   margin-right: 40px;
 }
+
 #sidenav>a:first-child {
   margin-top: 15px;
   margin-bottom: 35px;
@@ -42,7 +41,6 @@
   display: flex;
   height: 40px;
   width: 40px;
-  /* margin-right: 20px; */
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -50,26 +48,18 @@
   border-radius: 20px;
   color: white;
   background-color: var(--icon-background);
- 
+
 }
+
 #account {
   display: flex;
-  /* justify-content: flex-end; */
-  /* Dịch chuyển phần tử sang bên phải */
   position: relative;
-  /* bottom: 10px;
-  right: 0; */
-  /* Đặt phần tử ở góc dưới bên phải */
-  /* height: 70px;
-  width: 200px; */
   color: black;
-  
+
 }
 
 #account>a>i {
   font-size: large;
-  /* height: 50px;
-  width: 50px; */
   border-radius: 20px;
   color: black;
 }
@@ -92,26 +82,16 @@
 }
 
 .logo {
-  /* position: relative; */
   width: 3%;
-  /* Đặt chiều rộng của logo */
   height: auto;
-  /* Chiều cao tự động điều chỉnh tương ứng */
-  /* margin-left: 0.5%; */
-  /* Khoảng cách từ dưới lên */
-  /* display: block; */
-  /* Hiển thị hình ảnh dưới dạng block để căn chỉnh */
   background-color: black;
   padding: 10px;
   border-radius: 6px;
-  
 }
 
 .logo:hover {
   opacity: 0.8;
-  /* Giảm độ mờ khi rê chuột vào */
 }
-
 
 .user-management {
   display: flex;
@@ -122,39 +102,17 @@
   padding: 0.5%;
   text-decoration: none;
 
-  /* Center align horizontally */
 }
-.centered-link {
-  display: flex;
-  align-items: center;
-}
-
-.link-text {
-  margin-left: 8px; /* Có thể điều chỉnh giá trị này để tăng hoặc giảm khoảng cách */
-}
-
 
 .centered-link {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: rgb(17, 1, 1);
-  margin-right: 4%;
+  margin-right: 5%;
   font-weight: bold;
 }
 
-
-
-
-
-
-#h1 {
-  justify-content: center;
+.link-text {
+  margin-left: 8px;
 }
-
-
-
-/* 
-.finan {
-  text-align: center;
-} */
