--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.css
@@ -1,21 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #upload {
-    border-style: dashed !important;
-    padding: .5rem !important;
-    height: 30%;
-    background-color: #f0f1ff;
+  border-style: dashed !important;
+  padding: 0.5rem !important;
+  height: 30%;
+  background-color: #f0f1ff;
 }
 
 form i {
-    font-size: 50px;
-    color: var(--primary);
+  font-size: 50px;
+  color: var(--primary);
 }
 
 #instruction-text {
-    font-size: 14px;
+  font-size: 14px;
+}
+
+::ng-deep svg.mdc-circular-progress__indeterminate-circle-graphic {
+  stroke: rgb(13, 110, 253) !important;
 }
