--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.html
@@ -1,7 +1,8 @@
 <div id="upload" class="w-100 border border-3 rounded-4 border-primary mb-2" [ngStyle]="{'height': '81%'}">
-  <form action="#" role="button" class="w-100 h-100 d-flex justify-content-center" (click)="onClick()">
-    <input type="file" class="file-input" (change)="onChange($event)" hidden />
-    <p class="text-center my-auto">
+  <form action="#" role="button" class="w-100 h-100 d-flex justify-content-center" (click)="loading ? $event.stopPropagation() : onClick()">
+    <input type="file" class="file-input" (change)="onChange($event)" hidden/>
+    <p class="text-center my-auto" *ngIf="loading"><mat-spinner class="custom-spinner" [diameter]="60"></mat-spinner></p>
+    <p class="text-center my-auto" *ngIf="!loading">
       <i class="fa-solid fa-cloud-upload-alt text-primary"></i><br />
       <b>Browse File to Upload</b>
     </p>
