--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -13,6 +13,7 @@
   --closed-status-background: #ececec;
   --closed-status-color: #808080; 
   --button-background: #6F4EFF;
+  --button-hover: #553cb9;
   --version-background: #fff5cc;
   --close-button-background: #f88477;
 }
