--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -36,7 +36,7 @@
           <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="expense">
               <th mat-header-cell *matHeaderCellDef> Expense </th>
-              <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
             </ng-container>
             <ng-container matColumnDef="costType">
               <th mat-header-cell *matHeaderCellDef> Cost Type </th>
@@ -52,7 +52,7 @@
             </ng-container>
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-              <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
             </ng-container>
             <ng-container matColumnDef="projectName">
               <th mat-header-cell *matHeaderCellDef> Project Name </th>
@@ -68,7 +68,7 @@
             </ng-container>
             <ng-container matColumnDef="notes">
               <th mat-header-cell *matHeaderCellDef> Notes </th>
-              <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.note}} </td>
             </ng-container>
   
             <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
