--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
@@ -113,3 +113,103 @@ main {
     width: 90%;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
+
+#create-button{
+    background-color: rgb(101, 104, 247);
+    height: 50px;
+    width: 100px;
+    /* animation: bounce-h 0.9s infinite; */
+}
+
+#cancel-button{
+    height: 50px;
+    width: 100px;
+    /* animation: bounce-v 3.6s infinite; */
+}
+
+@keyframes bounce-h {
+    10%{
+        height: 50px;
+        width: 100px;
+    }
+    50%{
+        height: 40px;
+        width: 100px;
+        transform: translateY(-120px);
+    }
+}
+
+@keyframes bounce-v {
+    0%{
+        height: 50px;
+        width: 100px;
+    }
+    10%{
+        height: 40px;
+        width: 80px;
+        transform: translateX(120px) translateY(-120px);
+    }
+    20%{
+        height: 50px;
+        width: 100px;
+        transform: translateX(240px) translateY(0px);
+    }
+    30%{
+        height: 40px;
+        width: 80px;
+        transform: translateX(360px) translateY(-120px);
+    }
+    40%{
+        height: 50px;
+        width: 100px;
+        transform: translateX(480px) translateY(0px);
+    }
+    50%{
+        height: 40px;
+        width: 80px;
+        transform: translateX(600px) translateY(-120px);
+    }
+    60%{
+        height: 50px;
+        width: 100px;
+        transform: translateX(480px) translateY(-240px);
+    }
+    70%{
+        height: 40px;
+        width: 80px;
+        transform: translateX(600px) translateY(-360px);
+    }
+    80%{
+        height: 50px;
+        width: 100px;
+        transform: translateX(480px) translateY(-480px);
+    }
+}
+
+@keyframes bounce-e {
+    0% {
+        height: 50px;
+        width: 100px;
+        transform: translate(-50%, -50%);
+    }
+    25% {
+        height: 40px;
+        width: 80px;
+        transform: translate(calc(-50% + 120px), calc(-50% - 120px));
+    }
+    50% {
+        height: 50px;
+        width: 100px;
+        transform: translate(calc(-50% + 240px), -50%);
+    }
+    75% {
+        height: 40px;
+        width: 80px;
+        transform: translate(calc(-50% + 360px), calc(-50% - 120px));
+    }
+    100% {
+        height: 50px;
+        width: 100px;
+        transform: translate(calc(-50% + 480px), -50%);
+    }
+}
