--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
@@ -20,7 +20,6 @@ form select {
     
 }
 
-
 .form-field{
     position: relative;
 }
@@ -73,21 +72,29 @@ main {
     padding: 20px;
 }
 
-.edit-button{
+button {
+    border: none;
+}
+#edit-button {
     position: absolute;
     top: 50%;
     right: 0;
     transform: translateY(-50%);
 }
 
-
-button {
-    background: #535c91;
-    border: none;
+#edit-button>button {
     color: white;
     padding: 10px 20px;
     border-radius: 10px;
-    margin-right: 10px;
+    background-color: var(--button-background);
+}
+
+#edit-button i {
+    margin-right: 5px;
+}
+
+#edit-button:hover>button {
+    background-color: var(--button-hover);
 }
 
 a {
