--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/dialog/dialog.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/dialog/dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>{{ data.title }}</h1>
 <mat-dialog-content>
-    <p>{{ data.content }}<p>
+    <p><b>{{ data.content }}</b><p>
     <p class="note">{{ data.note }}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
