--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -1,5 +1,5 @@
 <main>
-  <a [routerLink]="['/reports']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
+  <a [routerLink]="['/plans']" id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
   <div class="h-100">
     <div id="page-title" class="mb-3">
       <h1><b> Import Plan</b></h1>
@@ -49,7 +49,7 @@
               </ng-container>
               <ng-container matColumnDef="unitPrice">
                 <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef> Amount </th>
@@ -57,7 +57,7 @@
               </ng-container>
               <ng-container matColumnDef="total">
                 <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0'}} </td>
               </ng-container>
               <ng-container matColumnDef="projectName">
                 <th mat-header-cell *matHeaderCellDef> Project Name </th>
