--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/start-term/start-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/start-term/start-term.component.css
@@ -21,7 +21,7 @@
   }
   
   ::ng-deep .mat-mdc-dialog-title {
-    color: #ff204e !important;
+    color: #20f366 !important;
     font-weight: bolder !important;
     font-size: 30px !important;
     text-transform: uppercase !important;
@@ -32,6 +32,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+  
+  }
+  ::ng-deep .mat-mdc-dialog-content[_ngcontent-ng-c1158750359]{
+    background-color: white !important;
   }
   
   ::ng-deep .mat-mdc-dialog-actions {
