re-style term details

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
@@ -17,10 +17,10 @@ form select {
     height: 50px;
     padding: 0 15px;
     background-color: #F2F4F3;
-    
+
 }
 
-.form-field{
+.form-field {
     position: relative;
 }
 
@@ -75,6 +75,7 @@ main {
 button {
     border: none;
 }
+
 #edit-button {
     position: absolute;
     top: 50%;
@@ -100,12 +101,15 @@ button {
 a {
     text-decoration: none;
     color: black;
-  }
-  
-  #back-link {
+}
+
+#back-link {
     font-size: 18px;
-  }
-  
-  #back-link:hover {
+}
+
+#back-link:hover {
     color: var(--button-background);
-  }
+}
+.abc{
+margin-right: 5%;
+}
