--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
@@ -9,8 +9,9 @@ main {
   padding: 30px;
 }
 
-.container {
+.containerr {
   position: relative;
+  width: 100%;
   border-bottom: 2px solid var(--white-smoke);
 }
 
