fix filter 'Quarter'

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.css
@@ -8,8 +8,10 @@ main {
   padding: 30px;
 }
 
-.container {
+.containerr {
   position: relative;
+  width: 100%;
+  border-bottom: 2px solid var(--white-smoke);
 }
 
 h6 {
