--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
@@ -1,7 +1,7 @@
 <main>
     <a [routerLink]="['/annual-reports']"  id="back-link"><i class="fa-solid fa-arrow-left-long me-2 mb-3"></i> Back </a>
 
-    <div class="container mb-1">
+    <div class="containerr mb-1">
       <div id="page-title">
         <h3><b>Annual Expense Report {{ annualReport.year }}</b></h3>
 
