--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="container mb-4 pb-3 mx-0">
+  <div class="containerr mb-4 pb-3 mx-0">
     <div id="page-title">
       <h1><b> Monthly Reports</b></h1>
       <h6>View all Monthly Reports</h6>
