update duedate messages

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
@@ -96,7 +96,7 @@
                             <div class="error-message"
                                 *ngIf="termForm.get('endDate')?.errors?.['required'] && termForm.get('endDate')?.touched">
                                 <span class="text-danger">End Date is required</span>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                                     {{ getPlanDueDateErrorMessage() }}
                                 </span>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- Add more error messages as needed -->
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                                     {{getReportDueDateErrorMessage() }}
                                 </span>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <!-- </div> -->
                     <!-- Report Due Date -->
