--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -21,8 +21,12 @@
         </div>
         <div class="col-10">
           <h4><b>Step 2</b></h4>
-          <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [isTermSelected]="isTermSelected"
-            [validName]="validFileName" [loading]="loading" (change)="onImport()" [ngStyle]="{'height': '54%'}"></app-upload>
+          <app-upload class="w-100" (fileSelected)="onImport($event)" 
+          [isTermSelected]="isTermSelected" 
+          [validName]="validFileName" 
+          [dueDate]="dueDate"
+          [loading]="loading" 
+          [ngStyle]="{'height': '54%'}"></app-upload>
           <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
             <div class="col-10 my-auto">
               <a role="button" (click)="exportPlanTemplate()"><b>File template</b></a>
@@ -30,7 +34,7 @@
               </p>
             </div>
             <div class="col-2 my-auto text-center">
-              <button class="border-0 rounded-3"><b>Download</b></button>
+              <button class="border-0 rounded-3" (click)="exportPlanTemplate()"><b>Download</b></button>
             </div>
           </div>
         </div>
