--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -32,8 +32,14 @@
         </div>
         <div class="col-10">
           <h4><b>Step 2</b></h4>
-          <app-upload class="w-100" (fileSelected)="onFileSelected($event)" [isMonthSelected]="isMonthSelected" [isTermSelected]="isTermSelected" 
-            [validName]="validFileName" (change)="onImport()" [ngStyle]="{'height': '54%'}"></app-upload>
+          <app-upload class="w-100" 
+          (fileSelected)="onFileSelected($event)" 
+          [isMonthSelected]="isMonthSelected" 
+          [isTermSelected]="isTermSelected" 
+          [validName]="validFileName" 
+          [dueDate]="dueDate"
+          (change)="onImport()" 
+          [ngStyle]="{'height': '54%'}"></app-upload>
           <div id="template" class="row rounded-3 mx-1 my-2 px-2" [ngStyle]="{'height': '27%'}">
             <div class="col-10 my-auto">
               <a role="button" (click)="exportReportTemplate()"><b>File template</b></a>
@@ -41,7 +47,7 @@
               </p>
             </div>
             <div class="col-2 my-auto text-center">
-              <button class="border-0 rounded-3"><b>Download</b></button>
+              <button class="border-0 rounded-3" (click)="exportReportTemplate()"><b>Download</b></button>
             </div>
           </div>
         </div>
