edit searchtext,userdetail,add,update user

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.css
@@ -35,6 +35,11 @@ form select {
 
 }
 
+form textarea{
+    font-weight: bold;
+    background-color: #ebeef3;
+}
+
 
 .form-field {
     position: relative;
