--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.css
@@ -40,14 +40,14 @@ form select:focus {
 }
 
 .loader {
-  width: 35px;
-  align-items: center;
-  aspect-ratio: 1;
+  width: 20px;
+  height:20px; /* Thêm chiều cao để tạo thành hình tròn */
+  display: inline-flex; /* Sử dụng inline-flex để căn giữa theo chiều ngang và chiều dọc */
+  justify-content: center; /* Căn giữa theo chiều ngang */
+  align-items: center; /* Căn giữa theo chiều dọc */
   border-radius: 50%;
-  border: 6px solid #747283;
-  animation:
-    l20-1 0.8s infinite linear alternate,
-    l20-2 1.6s infinite linear;
+  border: 4px solid #ffffff;
+  animation: l20-1 0.8s infinite linear alternate, l20-2 1.6s infinite linear;
 }
 
 @keyframes l20-1 {
@@ -223,7 +223,8 @@ main>div {
   content: "This field cannot be edited";
   position: absolute;
   color: #ee0000; 
-  font-size: 12px; 
+  font-size: 14px; 
+  background-color: #FAF6F6;
   display: none;
   white-space: nowrap; 
   font-variant: small-caps; 
