update notes and button update + add

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/add-new-user/add-new-user.component.html
@@ -256,9 +256,9 @@
                         <button routerLink="/user-list" type="button" class="btn btn-secondary btn-lg">Cancel</button>
                     </div>}
                     @else { <div class="col-md-6 text-center">
-                        <button type="submit" class="btn btn-primary btn-lg me-3" [ngClass]="{'btn-disabled': !addUserF.valid}" [disabled]="isSubmitting">
-                            <span *ngIf="!isSubmitting">Create</span>
-                            <span *ngIf="isSubmitting">
+                        <button type="submit" class="btn btn-primary btn-lg me-3" [ngClass]="{'btn-disabled': !addUserF.valid || isSubmitting}" [disabled]="!addUserF.valid || isSubmitting">
+                            <span>Create</span>
+                            <span *ngIf="isSubmitting && addUserF.valid">
                                 <span class="loader"></span>
                             </span>
                         </button>
